# sentiment-analysis

./: Cargo.toml  README.md  cspell.json  runtime-config.toml  spin.toml
.github/workflows/: ci.yml  rust-clippy.yml
assets/: dynamic.js  index.html
src/: lib.rs
